# tpc_c_cplusplus

./: .gitmodules  Cross-Compilation Guide for Open-Source Third-Party Libraries inOpenHarmony_en.md  OAT.xml  README.en.md  README.md  README_en.md  README_zh.md
.github/workflows/: ffmpeg.yml  main.yml  openssl.yml
bsdiff/docs/: rom_integrate.md
busybox/: BUILD.gn  Makefile  README.OpenSource  README_zh.md  build_busybox.sh  busybox.config  busybox_config.patch
busybox/docs/: rom_integrate.md
common/: add_thirdparty_component.md  cmake-build.md  cmake_build.md  gn-build.md  gn-compile.md  gn_build.md  gn_compile.md  gn_compile_build.md
community/CUnit/: HPKBUILD
community/Collections-C/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM
community/Collections-C/docs/: hap_integrate.md
community/GmSSL-v1/: HPKBUILD
community/LuaJIT/: HPKBUILD
community/OpenBLAS/: HPKBUILD
community/enet/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM  enet_oh_pkg.patch
community/enet/docs/: hap_integrate.md
community/glib/: 0001-ENABLE_NLS-ENABLE_NLS-GPL.patch  HPKBUILD  close_ENABLE_NLS.diff  close_ENABLE_NLS.patch
community/libuv/: HPKBUILD
community/n2n/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM  n2n-3.0_oh_pkg.patch
community/n2n/docs/: hap_integrate.md
community/oniguruma/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM  oniguruma_v6.9.10_oh_pkg.patch
community/oniguruma/docs/: hap_integrate.md
community/poco/: 0001-SharedMemory.patch  HPKBUILD  arm64-v8a-cross-file.txt  armeabi-v7a-cross-file.txt
community/sc/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM  sc_1.0.4_oh_pkg.patch  sc_oh_pkg.patch
community/sc/docs/: hap_integrate.md
community/u8g2/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM  u8g2_master_oh_pkg.patch
community/u8g2/docs/: hap_integrate.md
community/zap/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM  zap_0.10.1_oh_pkg.patch
community/zap/docs/: hap_integrate.md
concurrentqueue/: README_zh.md
concurrentqueue/docs/: rom_integrate.md
docs/: FAQ.md  MacFAQ.md  adapter_mac.md  adapter_thirdlib.md  adapter_thirdlib_create_cmake.md  adapter_thirdlib_reconfiguration_cmake.md  make_portting.md  openssl_use_in_openharnmony.md  thirdparty_knowledge.md  thirdparty_list.md  thirdparty_port.md
faad2/: BUILD.gn  CMakeLists.txt  README.OpenSource  README_zh.md  bundle.json
faad2/adapted/: config.h
faad2/docs/: hap_integrate.md  rom_integrate.md
iconv/: BUILD.gn  README_zh.md  ohos.build
iconv/adapter/include/samples/: alloca.h  fcntl.h  signal.h
iconv/adapter/include/samples/malloc/: scratch_buffer.gl.h
iconv/cmake/: README_zh.md
iconv/cmake/libiconv/: CMakeLists.txt
iconv/cmake/libiconv/lib/: CMakeLists.txt
iconv/cmake/libiconv/libcharset/: CMakeLists.txt
iconv/docs/: add_thirdparty_component.md  rom_integrate.md
iconv/gn/: README_zh.md
iconv/gn/iconv/: BUILD.gn
libmp3lame/: BUILD.gn  README.OpenSource  README_zh.md
libmp3lame/docs/: rom_integrate.md
libsvm/: BUILD.gn  CMakeLists.txt  README.OpenSource  README_zh.md  bundle.json
libsvm/adapted/: config.h
libsvm/docs/: hap_integrate.md  rom_integrate.md
libzip/: BUILD.gn  CMakeLists.txt  README.OpenSource  README_zh.md  bundle.json
libzip/adapted/include/: config.h
libzip/adapted/lib/: zip_err_str.c
libzip/docs/: hap_integrate.md  rom_integrate.md
libzip/test/: test命令.txt
lycium/: README.md  build.sh  test.sh
lycium/Buildtools/: README.md  SHA512SUM
lycium/Buildtools/toolchain/: x86_64-linux-ohos-clang  x86_64-linux-ohos-clang++
lycium/CItools/: README_zh.md
lycium/CItools/busybox/: busybox_arm64_v8a_Compilation_instructions.md  busybox_x86_64_compilation_instructions.md
lycium/CItools/cmake/: cmake_arm64_v8a_compilation_instructions.md  cmake_x86_64_compilation_instructions.md
lycium/CItools/make/: make_arm64_v8a_Compilation_instructions.md  make_x86_64_compilation_instructions.md
lycium/CItools/perl/: perl_x86_64_compilation_instructions.md
lycium/CItools/shell_cmd/: shell_cmd_arm64_v8a_Compilation_instructions.md  shell_cmd_x86_64_compilation_instructions.md
lycium/doc/: app_calls_third_lib.md
lycium/doc/ohos_use_sdk/: OHOS_SDK-Usage.md
lycium/script/: build_hpk.sh  envset.sh
minizip-ng/: CMakeLists.txt  README_zh.md
minizip-ng/docs/: hap_integrate.md  rom_integrate.md
modbus/docs/: rom_integrate.md
mqtt/: BUILD.gn
mqtt/docs/: rom_integrate.md
openjpeg/: BUILD.gn  README.OpenSource  README_zh.md  ohos.build
openjpeg/adapter/script/: test_open_jpeg.sh
openjpeg/docs/: rom_integrate.md
openjpeg/gn/: README_zh.md  gn_usage.md
openjpeg/gn/openjpeg/: BUILD.gn
thirdparty_template/: README_zh.md  ohos.build
thirdparty_template/adapted/: config.h
tinyxml2/: README.OpenSource  README_zh.md
tinyxml2/docs/: hap_integrate.md  rom_integrate.md
tools/: build.sh
tools/CItools/cmake/: cmake_compilation_instructions.md
tools/script/: build_hpk.sh  envset.sh
unrar/: CMakeLists.txt  README_zh.md
unrar/docs/: hap_integrate.md
xerces-c/: README_zh.md
xerces-c/cmake/: README_zh.md
xerces-c/cmake/xerces-c/: config.h
xerces-c/cmake/xerces-c/src/: CMakeLists.txt
xerces-c/cmake/xerces-c/src/third_party_icu/: CMakeLists.txt
xerces-c/gn/: README_zh.md
xerces-c/gn/xerces-c/: config.h  config.h.in
xerces-c/gn/xerces-c/samples/: BUILD.gn
xerces-c/gn/xerces-c/src/: BUILD.gn
xerces-c/gn/xerces-c/tests/: BUILD.gn
xz/docs/: rom_integrate.md
zbar/: BUILD.gn  CMakeLists.txt  README.OpenSource  README_zh.md  bundle.json
zbar/adapted/third_party_libjpeg/: CMakeLists.txt
zbar/adapted/third_party_libpng/: CMakeLists.txt
zbar/docs/: hap_integrate.md  rom_integrate.md
zstd/docs/: rom_integrate.md
zxing-cpp/: BUILD.gn  CMakeLists.txt  README.OpenSource  README_zh.md  bundle.json
zxing-cpp/docs/: hap_integrate.md  rom_integrate.md
