import("//build/ohos.gni")

declare_args() {
  enable_svm_test = false
}

config("config") {
  cflags = [
    "-O3",
    "-Wall",
    "-Wno-extra-tokens",
    "-Wno-incompatible-pointer-types",
    "-Wno-parentheses",
    "-Wno-unused-variable",
    "-Wno-absolute-value",
    "-Wno-unused-function",
    "-Wno-unused-const-variable",
    "-Wno-unused-label",
    "-Wno-shift-negative-value",
    "-Wno-tautological-pointer-compare",
    "-Wno-duplicate-decl-specifier",
  ]
}

ohos_source_set("libsvm_source") {
  sources = [ "//third_party/libsvm/svm.cpp" ]
  include_dirs = [ "//third_party/libsvm/" ]
  configs = [ ":config" ]
}

ohos_executable("svm-scale") {
  sources = [ "//third_party/libsvm/svm-scale.c" ]
  include_dirs = [ "//third_party/libsvm/" ]

  configs = [ ":config" ]

  deps = [ "//third_party/libsvm:libsvm" ]
  subsystem_name = "thirdparty"
  part_name = "libsvm"
  output_name = "svm-scale"
}

ohos_executable("svm-train") {
  sources = [ "//third_party/libsvm/svm-train.c" ]
  include_dirs = [ "//third_party/libsvm/" ]

  configs = [ ":config" ]

  deps = [ "//third_party/libsvm:libsvm" ]
  subsystem_name = "thirdparty"
  part_name = "libsvm"
  output_name = "svm-train"
}

ohos_executable("svm-predict") {
  sources = [ "//third_party/libsvm/svm-predict.c" ]
  include_dirs = [ "//third_party/libsvm/" ]

  configs = [ ":config" ]

  deps = [ "//third_party/libsvm:libsvm" ]
  subsystem_name = "thirdparty"
  part_name = "libsvm"
  output_name = "svm-predict"
}

ohos_shared_library("libsvm") {
  deps = [ ":libsvm_source" ]
  part_name = "libsvm"
  output_name = "svm"
}

group("svm_targets") {
  deps = [ ":libsvm" ]
  if (enable_svm_test) {
    deps += [
      ":svm-predict",
      ":svm-scale",
      ":svm-train",
    ]
  }
}
